@@ -9,7 +9,7 @@ class Well(object):
         """base hidden class"""
     class Sub(Data):
         """whaou, is Data found???"""
-        yo = Data()
+        attr = Data()
     def func(self):
         """check Sub is not defined here"""
         return Sub(), self
