@@ -3,7 +3,8 @@ C: 12:Run: Invalid name "bBb" for type variable (should match [a-z_][a-z0-9_]{2,
 C: 26:HOHOHOHO: Invalid name "HOHOHOHO" for type function (should match [a-z_][a-z0-9_]{2,30}$)
 C: 28:HOHOHOHO: Invalid name "HIHIHI" for type variable (should match [a-z_][a-z0-9_]{2,30}$)
 C: 31:xyz: Invalid name "xyz" for type class (should match [A-Z_][a-zA-Z0-9]+$)
-C: 36:xyz.Youplapoum: Invalid name "Youplapoum" for type method (should match [a-z_][a-z0-9_]{2,30}$)
-C: 46: Invalid name "benpasceluila" for type constant (should match (([A-Z_][A-Z0-9_]*)|(__.*__))$)
-C: 52:Correct.__init__: Invalid name "_Ca_va_Pas" for type attribute (should match [a-z_][a-z0-9_]{2,30}$)
+C: 34:xyz: Invalid name "zz" for type class attribute (should match ([A-Za-z_][A-Za-z0-9_]{2,30}|(__.*__))$)
+C: 39:xyz.Youplapoum: Invalid name "Youplapoum" for type method (should match [a-z_][a-z0-9_]{2,30}$)
+C: 54: Invalid name "benpasceluila" for type constant (should match (([A-Z_][A-Z0-9_]*)|(__.*__))$)
+C: 60:Correct.__init__: Invalid name "_Ca_va_Pas" for type attribute (should match [a-z_][a-z0-9_]{2,30}$)
 W:  8:Run.B: Unused variable 'B'
