@@ -2,6 +2,8 @@ ChangeLog for Pylint
 ====================
 
 --
+    * Add new name type 'class_attribute' for attributes defined
+      in class scope. By default, allow both const and variable names.
     * New warning trailing-whitespace (C0303) that warns about
       trailing whitespace.
     * Trailing whitespace does not count towards the line length
